tests/neg-macros/i6432/Test_2.scala

object TestA {
  import Macro.*
  foo"abc${"123"}xyz${"456"}fgh" // error // error // error
}